--- a/src/fs_urlbar.css
+++ b/src/fs_urlbar.css
@@ -5,10 +5,11 @@
     #urlbar {
         position: fixed !important;
         width: var(--floating-urlbar-width) !important;
+        top: var(--urlbar-top-position) !important;
         left: calc(
             50vw - var(--floating-urlbar-width) / 2 + var(--sidebar-width) / 2
         ) !important;
-        top: var(--urlbar-top-position) !important;
+
         border-radius: 12px !important;
     }
     
@@ -34,16 +35,12 @@
         border-radius: 12px 12px 0 0 !important;
     }
     
-    #urlbar-input, #tracking-protection-icon-container {
-        margin-left: 11px !important;
+    #urlbar-input {
+        margin-left: 12px !important;
     }
     
-    #urlbar-search-mode-indicator {
-        margin-left: 4px !important;
-    }
-    
-    #urlbar[searchmode=""] #urlbar-input, #urlbar[pageproxystate="valid"] #urlbar-input {
-        margin-left: 0 !important;
+    #tracking-protection-icon-container, #identity-box, #page-action-buttons {
+        display: none !important;
     }
 
     .urlbarView {
